@@ -3,6 +3,7 @@ git HEAD
     * IRIS / db-iris: Add lookahead option
     * db-iris: Fix --via not matching destination of trains with incomplete
       route data
+    * Detect and merge duplicate results caused by train ID changes
 
 Travel::Status::DE::IRIS 0.02 - Mon Feb 03 2014
 
